# quadlods

./: CMakeLists.txt  FindQuadlods.cmake  README  README.md  TODO  circletest.cpp  circletest.h  config.h.in  contfrac.cpp  contfrac.h  discrepancy.cpp  discrepancy.h  dotbaton.cpp  dotbaton.h  en.po  filltest.cpp  filltest.h  flowertest.cpp  flowertest.h  fourier.cpp  fourier.h  histogram.cpp  histogram.h  hstep.cpp  hstep.h  interact.cpp  interact.h  interact.po  ldecimal.cpp  ldecimal.h  main.cpp  main.h  manysum.cpp  manysum.h  matrix.cpp  matrix.h  messages.po  mthreads.h  pairpoint.cpp  pairpoint.h  (+14 more)
en/LC_MESSAGES/: interact.po
test/: test.data  test.expected
